--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.27",
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "react": "^16.12.0",
