--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "moduleResolution": "node",
     "lib": ["dom", "dom.iterable", "esnext"],
     "resolveJsonModule": true,
-    "baseUrl": "src",
+    "baseUrl": "src"
   },
   "compileOnSave": true,
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
