--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "yarn remake; webpack-dev-server --config webpack.config.js",
     "build": "yarn remake; NODE_ENV=production webpack --config webpack.config.js",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "generate": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/react-common": "^3.1.3",
