:lipstick: Improve restaurant list style

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "remake": "rm -rf dist/; mkdir -p dist/; cp src/index.html dist/index.html;",
-    "start": "yarn remake; webpack-dev-server --config webpack.config.js",
+    "start": "yarn remake; webpack-dev-server --config webpack.config.js --progress",
     "build": "yarn remake; NODE_ENV=production webpack --config webpack.config.js",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "codegen": "graphql-codegen --config codegen.yml"
